# DataFetcher_Visualizer

./: .env  Cargo.toml  README.md  stock_data.db
migrations/2025-02-27-170039_create_posts/: down.sql  up.sql
python/: plot_script.py
rust/: .env  diesel.toml
rust/src/: main.rs  python_handling.rs  schema.rs
src/: api.rs  db.rs  deserialize.rs  main.rs
